--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,7 +2,10 @@
     padding: 0;
     margin: 0;
 }
-@import "_variables.scss";
-@import "_header.scss";
-@import "_main.scss";
-@import "_footer.scss";
+
+@import "variables.scss";
+@import "header.scss";
+@import "footer.scss";
+@import "main.scss";
+
+
