--- a/css/styles.css
+++ b/css/styles.css
@@ -130,11 +130,13 @@ main .carousel-inner .carousel-item .img-carousel {
 }
 
 /* INDUMENTARIA */
-.features, main .contenedor-camperas .row .img-camperas, main .contenedor-remeras .row .img-remeras, main .contenedor-buzos .row .img-buzo {
-  height: 210px;
+.features, main .contenedor-camperas .row .cuadrados .cont .img-camperas, main .contenedor-remeras .row .cuadrados .cont .img-remeras, main .contenedor-buzos .row .cuadrados .cont .img-buzo {
+  height: 170px;
   width: auto;
   padding: 1%;
   border-radius: 6px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 main .titulos-indumentaria {
@@ -146,15 +148,61 @@ main .titulos-indumentaria {
 main .contenedor-buzos .row {
   justify-content: center;
 }
+main .contenedor-buzos .row .cuadrados .subimagen {
+  border: solid 1px grey;
+  width: 80%;
+  border-radius: 4px;
+  justify-content: center;
+  margin-left: 16px;
+  border-top: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  background: rgb(217, 216, 216);
+  background: linear-gradient(0deg, rgb(217, 216, 216) 20%, rgb(255, 248, 248) 60%);
+}
+main .contenedor-buzos .row .cuadrados .subimagen p {
+  border-top: solid 1px grey;
+}
 main .contenedor-remeras .row {
   justify-content: center;
 }
+main .contenedor-remeras .row .cuadrados .subimagen {
+  border: solid 1px grey;
+  width: 80%;
+  border-radius: 4px;
+  justify-content: center;
+  margin-left: 16px;
+  border-top: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  background: rgb(217, 216, 216);
+  background: linear-gradient(0deg, rgb(217, 216, 216) 20%, rgb(255, 248, 248) 60%);
+}
+main .contenedor-remeras .row .cuadrados .subimagen p {
+  border-top: solid 1px grey;
+}
 main .contenedor-camperas {
-  height: 500px;
+  height: 350px;
 }
 main .contenedor-camperas .row {
   justify-content: center;
 }
+main .contenedor-camperas .row .cuadrados .subimagen {
+  border: solid 1px grey;
+  width: 79%;
+  border-radius: 4px;
+  justify-content: center;
+  margin-left: 16px;
+  border-top: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  background: rgb(217, 216, 216);
+  background: linear-gradient(0deg, rgb(217, 216, 216) 20%, rgb(255, 248, 248) 60%);
+}
+main .contenedor-camperas .row .cuadrados .subimagen p {
+  border-top: solid 1px grey;
+}
+
 /* CONTACTO */
 main .cabeza {
   color: black;
@@ -182,6 +230,35 @@ main .btn {
     border-top: 0;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+  }
+  /* INDUMENTARIA */
+  main .titulos-indumentaria {
+    font-size: 18px;
+    font-weight: 700;
+  }
+  main .contenedor-buzos .row .cuadrados .cont .img-buzo {
+    height: 240px;
+  }
+  main .contenedor-buzos .row .cuadrados .subimagen {
+    width: 85.5%;
+  }
+  main .contenedor-remeras .row .cuadrados .cont .img-remeras {
+    height: 240px;
+  }
+  main .contenedor-remeras .row .cuadrados .subimagen {
+    width: 85.5%;
+  }
+  main .contenedor-camperas {
+    height: 400px;
+  }
+  main .contenedor-camperas .row {
+    justify-content: center;
+  }
+  main .contenedor-camperas .row .cuadrados .cont .img-camperas {
+    height: 240px;
+  }
+  main .contenedor-camperas .row .cuadrados .subimagen {
+    width: 84%;
   }
 }
 @media only screen and (min-width: 768px) {
@@ -226,14 +303,30 @@ main .btn {
     padding-left: 2%;
   }
   /* INDUMENTARIA */
-  main .contenedor-buzos .row .img-buzo {
-    height: 250px;
+  main .titulos-indumentaria {
+    font-size: 18px;
+    font-weight: 700;
   }
-  main .contenedor-remeras .row .img-remeras {
-    height: 250px;
+  main .contenedor-buzos .row .cuadrados .cont .img-buzo {
+    height: 210px;
   }
-  main .contenedor-camperas .row .img-camperas {
-    height: 250px;
+  main .contenedor-buzos .row .cuadrados .subimagen {
+    width: 83.5%;
+  }
+  main .contenedor-remeras .row .cuadrados .cont .img-remeras {
+    height: 210px;
+  }
+  main .contenedor-remeras .row .cuadrados .subimagen {
+    width: 83.5%;
+  }
+  main .contenedor-camperas {
+    height: 400px;
+  }
+  main .contenedor-camperas .row .cuadrados .cont .img-camperas {
+    height: 210px;
+  }
+  main .contenedor-camperas .row .cuadrados .subimagen {
+    width: 81.5%;
   }
 }
 @media only screen and (min-width: 1024px) {
@@ -256,23 +349,30 @@ main .btn {
     border-top-right-radius: 0;
   }
   /* INDUMENTARIA */
-  main .contenedor-buzos .titulos-indumentaria {
-    font-size: 20px;
+  main .titulos-indumentaria {
+    font-size: 18px;
+    font-weight: 700;
   }
-  main .contenedor-buzos .row .img-buzo {
+  main .contenedor-buzos .row .cuadrados .cont .img-buzo {
     height: 300px;
   }
-  main .contenedor-remeras .titulos-indumentaria {
-    font-size: 20px;
+  main .contenedor-buzos .row .cuadrados .subimagen {
+    width: 88%;
   }
-  main .contenedor-remeras .row .img-remeras {
+  main .contenedor-remeras .row .cuadrados .cont .img-remeras {
     height: 300px;
   }
-  main .contenedor-camperas .titulos-indumentaria {
-    font-size: 20px;
+  main .contenedor-remeras .row .cuadrados .subimagen {
+    width: 88%;
   }
-  main .contenedor-camperas .row .img-camperas {
+  main .contenedor-camperas {
+    height: 400px;
+  }
+  main .contenedor-camperas .row .cuadrados .cont .img-camperas {
     height: 300px;
+  }
+  main .contenedor-camperas .row .cuadrados .subimagen {
+    width: 87%;
   }
 }
 @media only screen and (min-width: 1440px) {
@@ -330,26 +430,30 @@ main .btn {
     grid-column: 3/4;
   }
   /* INDUMENTARIA */
-  main .contenedor-buzos .titulos-indumentaria {
-    font-size: 25px;
+  main .titulos-indumentaria {
+    font-size: 23px;
+    font-weight: 700;
   }
-  main .contenedor-buzos .row .img-buzo {
-    height: 450px;
+  main .contenedor-buzos .row .cuadrados .cont .img-buzo {
+    height: 440px;
   }
-  main .contenedor-remeras .titulos-indumentaria {
-    font-size: 25px;
+  main .contenedor-buzos .row .cuadrados .subimagen {
+    width: 91.5%;
   }
-  main .contenedor-remeras .row .img-remeras {
-    height: 450px;
+  main .contenedor-remeras .row .cuadrados .cont .img-remeras {
+    height: 440px;
+  }
+  main .contenedor-remeras .row .cuadrados .subimagen {
+    width: 91.5%;
   }
   main .contenedor-camperas {
-    height: 800px;
+    height: 600px;
   }
-  main .contenedor-camperas .titulos-indumentaria {
-    font-size: 25px;
+  main .contenedor-camperas .row .cuadrados .cont .img-camperas {
+    height: 440px;
   }
-  main .contenedor-camperas .row .img-camperas {
-    height: 450px;
+  main .contenedor-camperas .row .cuadrados .subimagen {
+    width: 90.5%;
   }
 }
 @media only screen and (min-width: 1920px) {
@@ -399,26 +503,33 @@ main .btn {
     font-size: 80px;
   }
   /* INDUMENTARIA */
-  main .contenedor-buzos .titulos-indumentaria {
-    font-size: 30px;
+  main .titulos-indumentaria {
+    font-size: 35px;
+    font-weight: 700;
   }
-  main .contenedor-buzos .row .img-buzo {
-    height: 700px;
+  main .contenedor-buzos .row .cuadrados .cont .img-buzo {
+    height: 750px;
   }
-  main .contenedor-remeras .titulos-indumentaria {
-    font-size: 30px;
+  main .contenedor-buzos .row .cuadrados .subimagen {
+    width: 94.5%;
+    font-size: 25px;
   }
-  main .contenedor-remeras .row .img-remeras {
-    height: 700px;
+  main .contenedor-remeras .row .cuadrados .cont .img-remeras {
+    height: 750px;
+  }
+  main .contenedor-remeras .row .cuadrados .subimagen {
+    width: 94.5%;
+    font-size: 25px;
   }
   main .contenedor-camperas {
-    height: 1000px;
+    height: 1100px;
   }
-  main .contenedor-camperas .titulos-indumentaria {
-    font-size: 30px;
+  main .contenedor-camperas .row .cuadrados .cont .img-camperas {
+    height: 750px;
   }
-  main .contenedor-camperas .row .img-camperas {
-    height: 700px;
+  main .contenedor-camperas .row .cuadrados .subimagen {
+    width: 94%;
+    font-size: 25px;
   }
   /* CONTACTO */
   main .cabeza {
